add corsConfigurationSource() method